Lection1 has been given today

--- a/_posts/1000-01-01-intro.md
+++ b/_posts/1000-01-01-intro.md
@@ -2,5 +2,9 @@
 layout: post
 ---
 
-## Welcome! 
-
+## NEUFUND
+<span style="color: green">Tech Review</span>
+```
+Alexander Gryaznov, CTO EVERCITY
+agryaznov@evercity.io
+```
