ETH-T reason formulation

--- a/_posts/1004-01-03-money.md
+++ b/_posts/1004-01-03-money.md
@@ -8,5 +8,5 @@ layout: post
     * has Controller
     * OK, we use similar impl
     
-+ <span style="color:red">EtherToken (ETH-T)</span>
-    * just kostyl
++ EtherToken (ETH-T)
+    * to make ETH commitment to ICBM possible
